# adi_api_mod

./: .gitignore  setup.sh
python/qubelsi/: README.md  build.sh  setup.py
python/qubelsi/qubelsi/: ad9082.py  lmx2594.py  qube.py
python/qubelsi/scripts/: get_jesd_status.sh  get_qubelsi_path.sh  setup_quel1.sh  setup_quel1_monitor.sh
src/: ad9081_wrapper.cpp  adi_ad9081_hal.c  setup.cfg  setup.py  test_ad9081_wrapper.py
v1.0.6/src/: ad9081_wrapper.cpp  adi_ad9081_device.c  adi_ad9081_hal.c  helloworld-monitor.c  helloworld.c  setup.cfg  setup.py  test_wrapper106.py
