[metadata]
name = adi_ad9081_v106
version = 0.0.1
description= a python wrapper of adi_ad9081 driver library

[options]
zip_safe = False
package_dir=
    =pkgsrc
packages = find:
install_requires = 
    numpy >= 1.21.0

[options.extras_require]
dev =
    black
    isort
    mypy
    pyproject-flake8

[options.packages.find]
where = pkgsrc
